// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PageComponents|HousingCounselor With All Fields 1`] = `
<HousingCounselor
  counselor={
    Object {
      "address": "123 Main St",
      "citystate": "San Francisco, CA",
      "languages": Array [
        "English",
      ],
      "name": "Counselor Name",
      "phone": "123-456-7890",
      "website": "www.counselor.org",
    }
  }
>
  <h3>
    <a
      href="www.counselor.org"
      target="_blank"
    >
      Counselor Name
    </a>
  </h3>
  <p
    className="text-sm text-gray-700 pb-3"
  >
    Language Services: 
    <span
      className="inline-block bg-primary-lighter rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
      key="English"
    >
      English
    </span>
  </p>
  <p>
    123 Main St
     
    <br />
     
    San Francisco, CA
  </p>
  <a
    href="tel:+1123-456-7890"
  >
    Call 123-456-7890
  </a>
  <br />
  <a
    href="www.counselor.org"
  >
    Visit Counselor Name
  </a>
</HousingCounselor>
`;

exports[`Storyshots PageComponents|HousingCounselor With Multiple Languages 1`] = `
<HousingCounselor
  counselor={
    Object {
      "languages": Array [
        "English",
        "Spanish",
        "Chinese",
      ],
      "name": "Counselor Name",
    }
  }
>
  <h3>
    <a
      target="_blank"
    >
      Counselor Name
    </a>
  </h3>
  <p
    className="text-sm text-gray-700 pb-3"
  >
    Language Services: 
    <span
      className="inline-block bg-primary-lighter rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
      key="English"
    >
      English
    </span>
    <span
      className="inline-block bg-primary-lighter rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
      key="Spanish"
    >
      Spanish
    </span>
    <span
      className="inline-block bg-primary-lighter rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
      key="Chinese"
    >
      Chinese
    </span>
  </p>
</HousingCounselor>
`;

exports[`Storyshots PageComponents|HousingCounselor With Only Required Fields 1`] = `
<HousingCounselor
  counselor={
    Object {
      "languages": Array [
        "English",
      ],
      "name": "Counselor Name",
    }
  }
>
  <h3>
    <a
      target="_blank"
    >
      Counselor Name
    </a>
  </h3>
  <p
    className="text-sm text-gray-700 pb-3"
  >
    Language Services: 
    <span
      className="inline-block bg-primary-lighter rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
      key="English"
    >
      English
    </span>
  </p>
</HousingCounselor>
`;
